// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete should handle "renderItem" prop missing 1`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="autocomplete:field"
  >
    <div
      class="reset input-block focused variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
    >
      <div
        class="main-column"
      >
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input focused variant-desktop size-l"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              value="Hello"
            />
          </div>
        </div>
      </div>
      <div
        class="display-flex align-items-center M-l__4"
      >
        <svg
          fill="#9e9e9e"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M3.247 6.342a1 1 0 011.412-.095L8 9.171l3.341-2.924a1 1 0 011.318 1.506l-4 3.5a1 1 0 01-1.317 0l-4-3.5a1 1 0 01-.095-1.411z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="root menu shadow-z4 rounds-md__all"
    data-testid="autocomplete:menu"
    role="menu"
    style="top: 56px;"
  >
    <div
      class="os-host os-host-foreign os-theme-dark os-host-resize-disabled os-host-scrollbar-horizontal-hidden os-host-scrollbar-vertical-hidden custom-scrollbar inner"
    >
      <div
        class="os-resize-observer-host"
      >
        <div
          class="os-resize-observer"
          style="right: 0px;"
        >
          <div
            class="os-resize-observer-item"
            dir="ltr"
            style="top: -2px; right: 0px; bottom: 0px; left: -2px;"
          >
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 3333333px; height: 3333333px;"
              />
            </div>
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 200%; height: 200%"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-size-auto-observer"
        style="height: calc(100% + 1px); float: left;"
      >
        <div
          class="os-resize-observer"
        >
          <div
            class="os-resize-observer-item"
            dir="ltr"
            style="top: -2px; right: 0px; bottom: 0px; left: -2px;"
          >
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 3333333px; height: 3333333px;"
              />
            </div>
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 200%; height: 200%"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-content-glue"
        style="margin: 0px 0px 0px 0px; width: -1px; height: -1px;"
      />
      <div
        class="os-padding"
      >
        <div
          class="os-viewport os-viewport-native-scrollbars-overlaid"
          style=""
        >
          <div
            class="os-content-arrange"
          />
          <div
            class="os-content"
            style="padding: 0px 0px 0px 0px; height: 100%; width: 100%;"
          >
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              aaaa
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              bbbb
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              cccc
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              dddd
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              eeee
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0px, 0);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0, 0px);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar-corner"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should handle defaultValue 1`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="autocomplete:field"
  >
    <div
      class="reset input-block variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
    >
      <div
        class="main-column"
      >
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input variant-desktop size-l"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="display-flex align-items-center M-l__4"
      >
        <svg
          fill="#9e9e9e"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M3.247 6.342a1 1 0 011.412-.095L8 9.171l3.341-2.924a1 1 0 011.318 1.506l-4 3.5a1 1 0 01-1.317 0l-4-3.5a1 1 0 01-.095-1.411z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete should renders correctly 1`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="autocomplete:field"
  >
    <div
      class="reset input-block variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
    >
      <div
        class="main-column"
      >
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input variant-desktop size-l"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              value="Hello"
            />
          </div>
        </div>
      </div>
      <div
        class="display-flex align-items-center M-l__4"
      >
        <svg
          fill="#9e9e9e"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M3.247 6.342a1 1 0 011.412-.095L8 9.171l3.341-2.924a1 1 0 011.318 1.506l-4 3.5a1 1 0 01-1.317 0l-4-3.5a1 1 0 01-.095-1.411z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete should renders correctly 2`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="autocomplete:field"
  >
    <div
      class="reset input-block variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
    >
      <div
        class="main-column"
      >
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input variant-desktop size-l"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              value="Hello"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete should renders correctly 3`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="autocomplete:field"
  >
    <div
      class="reset input-block focused variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
    >
      <div
        class="main-column"
      >
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input focused variant-desktop size-l"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              value="Hello"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="root menu shadow-z4 rounds-md__all"
    data-testid="autocomplete:menu"
    role="menu"
    style="top: 56px;"
  >
    <div
      class="os-host os-host-foreign os-theme-dark os-host-resize-disabled os-host-scrollbar-horizontal-hidden os-host-scrollbar-vertical-hidden custom-scrollbar inner"
    >
      <div
        class="os-resize-observer-host"
      >
        <div
          class="os-resize-observer"
          style="right: 0px;"
        >
          <div
            class="os-resize-observer-item"
            dir="ltr"
            style="top: -2px; right: 0px; bottom: 0px; left: -2px;"
          >
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 3333333px; height: 3333333px;"
              />
            </div>
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 200%; height: 200%"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-size-auto-observer"
        style="height: calc(100% + 1px); float: left;"
      >
        <div
          class="os-resize-observer"
        >
          <div
            class="os-resize-observer-item"
            dir="ltr"
            style="top: -2px; right: 0px; bottom: 0px; left: -2px;"
          >
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 3333333px; height: 3333333px;"
              />
            </div>
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 200%; height: 200%"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-content-glue"
        style="margin: 0px 0px 0px 0px; width: -1px; height: -1px;"
      />
      <div
        class="os-padding"
      >
        <div
          class="os-viewport os-viewport-native-scrollbars-overlaid"
          style=""
        >
          <div
            class="os-content-arrange"
          />
          <div
            class="os-content"
            style="padding: 0px 0px 0px 0px; height: 100%; width: 100%;"
          >
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              U.S.
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              FRANCE
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              CHINA
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              CAMBODIA
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              CHILE
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              CANADA
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              POLAND
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              RUSSIA
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              BELARUS
            </div>
            <div
              class="root size-m"
              data-testid="dropdown-item"
              role="menuitem"
            >
              UKRAINE
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0px, 0);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0, 0px);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar-corner"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete should renders correctly 4`] = `
<div
  class="root"
>
  <div
    class="root field"
    data-testid="autocomplete:field"
  >
    <div
      class="reset input-block focused variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
    >
      <div
        class="main-column"
      >
        <div
          class="input-wrapper"
        >
          <div
            class="reset root base-input focused variant-desktop size-l"
          >
            <input
              class="field reset"
              data-testid="text-field:field"
              value="Hello"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="root menu shadow-z4 rounds-md__all"
    data-testid="autocomplete:menu"
    role="menu"
    style="top: 56px;"
  >
    <div
      class="os-host os-host-foreign os-theme-dark os-host-resize-disabled os-host-scrollbar-horizontal-hidden os-host-scrollbar-vertical-hidden custom-scrollbar inner"
    >
      <div
        class="os-resize-observer-host"
      >
        <div
          class="os-resize-observer"
          style="right: 0px;"
        >
          <div
            class="os-resize-observer-item"
            dir="ltr"
            style="top: -2px; right: 0px; bottom: 0px; left: -2px;"
          >
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 3333333px; height: 3333333px;"
              />
            </div>
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 200%; height: 200%"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-size-auto-observer"
        style="height: calc(100% + 1px); float: left;"
      >
        <div
          class="os-resize-observer"
        >
          <div
            class="os-resize-observer-item"
            dir="ltr"
            style="top: -2px; right: 0px; bottom: 0px; left: -2px;"
          >
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 3333333px; height: 3333333px;"
              />
            </div>
            <div
              class="os-resize-observer-item"
            >
              <div
                class="os-resize-observer-item-final"
                style="width: 200%; height: 200%"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-content-glue"
        style="margin: 0px 0px 0px 0px; width: -1px; height: -1px;"
      />
      <div
        class="os-padding"
      >
        <div
          class="os-viewport os-viewport-native-scrollbars-overlaid"
          style=""
        >
          <div
            class="os-content-arrange"
          />
          <div
            class="os-content"
            style="padding: 0px 0px 0px 0px; height: 100%; width: 100%;"
          >
            <div
              class="root"
              data-testid="autocomplete:loading-area"
            >
              <div>
                <svg
                  class="spinner size-small"
                  height="20"
                  stroke="#1f84db"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <circle
                    class="circle"
                    cx="10"
                    cy="10"
                    r="9"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-horizontal os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0px, 0);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar os-scrollbar-vertical os-scrollbar-unusable"
      >
        <div
          class="os-scrollbar-track os-scrollbar-track-off"
        >
          <div
            class="os-scrollbar-handle"
            style="transform: translate(0, 0px);"
          />
        </div>
      </div>
      <div
        class="os-scrollbar-corner"
      />
    </div>
  </div>
</div>
`;
